--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "userManagement": "Server=DESKTOP-HFNNNU4;Database=userManagementDB;Trusted_Connection=True;"
+    "userManagement": "Data Source=SQL8001.site4now.net;Initial Catalog=db_a854d9_tiensan;User Id=db_a854d9_tiensan_admin;Password=Daicabavi1;"
   },
   "JwT": {
     "Key": "dasdqwtdssfhy567hgrfrrturywvhdgsgsc",
